<resources>
    <string name="app_name">Easychool</string>
    <string name="criar_conta">Crie sua conta</string>
    <string name="btn_responsavel_aluno">Pais/Responsáveis</string>
    <string name="btn_login">Login</string>
    <string name="fazer_login">Já possui uma conta? Entre</string>
    <string name="txt_email">Email:</string>
    <string name="txt_senha">Senha:</string>
    <string name="fazer_login_title">Faça seu Login</string>
    <string name="fazer_login_desc">Preencha pos campos abaixo para realizar o login</string>
    <string name="esqueceu_senha">Esqueceu sua senha? Clique aqui</string>
    <string name="manter_conctado">Mantenha-me conectado</string>
    <string name="cadastro_pai_aluno">Cadastre-se</string>
    <string name="fazer_cadastro_desc">Preencha os campos abaixo com seus dados pessoais</string>
    <string name="txt_nome">Nome:</string>
    <string name="txt_telefone">Telefone:</string>
    <string name="txt_confirmar_senha">Confirme sua Senha:</string>
    <string name="txt_rg">RG:</string>
    <string name="txt_cpf">CPF:</string>
    <string name="termos_uso">Eu concordo com os Termos e Condições e Política de Privacidade</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="continuar">Continuar</string>
    <string name="definir_senha">Defina uma senha de acesso</string>
    <string name="desc_definir">Defina uma senha para que você possa acessar a nossa plataforma</string>
    <string name="nav_search">Pesquisar</string>
    <string name="nav_config">Configurar</string>
    <string name="nav_fila">Fila de Espera</string>
    <string name="title_activity_principal">MainActivity</string>
    <string name="title_pesquisa">Pesquisar</string>
    <string name="title_fila">Fila de Espera</string>
    <string name="title_confguracao">Configurações</string>
    <string name="title_activity_maps">Map</string>
    <string name="conf_perfil">Perfil</string>
    <string name="conf_notify">Notificações</string>
    <string name="conf_prefire">Preferências</string>
    <string name="conf_logout">Logout</string>
    <string name="from">From</string>
    <string name="empresa">Wings</string>
    <string name="title_config">Faça as suas configurações aqui</string>
    <string name="config_perfil">Altere seus dados, mantendo-os sempre atualizados</string>
    <string name="salvar">Salvar</string>
    <string name="senha_antiga">Digite sua senha atual:</string>
    <string name="senha_nova">Digite a senha nova</string>
</resources>